Bug 312154, Start script does not take care of running instance on solaris sparc. benjamin: first-review+ Patch by leon.sha@sun.com