toolkit/components/remote/nsGTKRemoteService.cpp
@@ -80,6 +80,14 @@
 #define MOZILLA_PROGRAM_PROP   "_MOZILLA_PROGRAM"
 #define MOZILLA_COMMANDLINE_PROP "_MOZILLA_COMMANDLINE"
 
+#ifdef IS_BIG_ENDIAN
+#define TO_LITTLE_ENDIAN32(x) \
+    ((((x) & 0xff000000) >> 24) | (((x) & 0x00ff0000) >> 8) | \
+    (((x) & 0x0000ff00) << 8) | (((x) & 0x000000ff) << 24))
+#else
+#define TO_LITTLE_ENDIAN32(x) (x)
+#endif
+
 #ifdef MOZ_XUL_APP
 const unsigned char kRemoteVersion[] = "5.1";
 #else
@@ -338,7 +346,7 @@ nsGTKRemoteService::HandleCommandLine(char* aBuffer, nsIDOMWindow* aWindow)
   // [argc][offsetargv0][offsetargv1...]<workingdir>\0<argv[0]>\0argv[1]...\0
   // (offset is from the beginning of the buffer)
 
-  PRInt32 argc = *NS_REINTERPRET_CAST(PRInt32*, aBuffer);
+  PRInt32 argc = TO_LITTLE_ENDIAN32(*NS_REINTERPRET_CAST(PRInt32*, aBuffer));
   char *wd   = aBuffer + ((argc + 1) * sizeof(PRInt32));
 
 #ifdef DEBUG_bsmedberg
@@ -360,7 +368,7 @@ nsGTKRemoteService::HandleCommandLine(char* aBuffer, nsIDOMWindow* aWindow)
   PRInt32  *offset = NS_REINTERPRET_CAST(PRInt32*, aBuffer) + 1;
 
   for (int i = 0; i < argc; ++i) {
-    argv[i] = aBuffer + offset[i];
+    argv[i] = aBuffer + TO_LITTLE_ENDIAN32(offset[i]);
 
 #ifdef DEBUG_bsmedberg
     printf("  argv[%i]:\t%s\n", i, argv[i]);
@@ -472,7 +480,7 @@ nsGTKRemoteService::HandlePropertyChange(GtkWidget *aWidget,
       return FALSE;
 
     // Failed to get the data off the window or it was the wrong type?
-    if (!data || !*data)
+    if (!data || !TO_LITTLE_ENDIAN32(*NS_REINTERPRET_CAST(PRInt32*, data)))
       return FALSE;
 
     // cool, we got the property data.
@@ -517,7 +525,7 @@ nsGTKRemoteService::HandlePropertyChange(GtkWidget *aWidget,
       return FALSE;
 
     // Failed to get the data off the window or it was the wrong type?
-    if (!data || !*data)
+    if (!data || !TO_LITTLE_ENDIAN32(*NS_REINTERPRET_CAST(PRInt32*, data)))
       return FALSE;
 
     // cool, we got the property data.
